added bitters and refills to stylesheets. added header to application template, added projects api

--- a/app/assets/javascripts/templates/application.js.hbs
+++ b/app/assets/javascripts/templates/application.js.hbs
@@ -1,6 +1,22 @@
+<header class="navigation">
+  <div class="navigation-wrapper">
+    <a href="javascript:void(0)" class="logo">
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
+    </a>
+    <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+    <div class="nav">
+      <ul id="navigation-menu">
+        <li class="nav-link"><a href="javascript:void(0)">Projects</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</header>
 <section class="container">
   <section class="inner-content">
-    <button>Hello World</button>
     {{ outlet }}
   </section>
 </section>
+<footer>
+  &copy; 2014 Mister Machine, LLC
+</footer>
