--- a/app/assets/javascripts/templates/application.js.hbs
+++ b/app/assets/javascripts/templates/application.js.hbs
@@ -6,8 +6,8 @@
     <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><a href="javascript:void(0)">Projects</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
+        <li class="nav-link">{{#link-to 'patterns'}}Patterns{{/link-to}}</a></li>
+        <li class="nav-link">{{#link-to 'contact'}}Contact{{/link-to}}</a></li>
       </ul>
     </div>
   </div>
