added projects template, hero refill, and mobile menu troggle

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="">
-  <title>The Tool Library</title>
+  <title>Tool Library</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Oswald:400,300,700|Lusitana:400,700|Open+Sans:400,800">
   <%= stylesheet_link_tag    'application' %>
   <%= javascript_include_tag 'application' %>
