--- a/app/assets/javascripts/templates/application.js.hbs
+++ b/app/assets/javascripts/templates/application.js.hbs
@@ -1,12 +1,13 @@
 <header class="navigation">
   <div class="navigation-wrapper">
-    <a href="javascript:void(0)" class="logo">
+    {{#link-to 'index' class='logo'}}
       <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
-    </a>
+    {{/link-to}}
     <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="navigation-menu">
         <li class="nav-link">{{#link-to 'patterns'}}Patterns{{/link-to}}</a></li>
+        <li class="nav-link">{{#link-to 'projects'}}Projects{{/link-to}}</a></li>
         <li class="nav-link">{{#link-to 'contact'}}Contact{{/link-to}}</a></li>
       </ul>
     </div>
